--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ first_name: Vedant
 middle_name:
 last_name: Dhruv
 email: vdhruv2@illinois.edu
+profile_image: "prof_pic.jpg"
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
