--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -33,7 +33,7 @@
   contents:
     - title: Graduate Research Assistant 
       institution: University of Illinois at Urbana-Champaign, Urbana, Illinois, USA
-      year: 2020 -
+      year: August 2020 -
       # description:
       #   - Description 1.
       #   - Description 2.
@@ -48,27 +48,15 @@
       #   - Description 1.
       #   - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Research Scholar
+      institution: Tata Institute of Fundamental Research, Mumbai, India
+      year: May 2018 - April 2019
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
+    - title: Visiting Undergraduate Researcher
+      institution: Tata Institute of Fundamental Research, Mumbai, India
+      year: May 2017 - July 2017
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
+  - title: Grants and Awards
   type: time_table
   contents:
     - year: 1921
@@ -78,6 +66,13 @@
     - year: 2029
       items:
         - Max Planck Medal
+
+- title: Open Source Projects
+  type: time_table
+  contents:
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      year: 2015-now
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 # - title: Academic Interests
 #   type: nested_list
