--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -21,7 +21,7 @@
       #     contents:
       #       - Sub-description 1.
       #       - Sub-description 2.
-    - title: B.Tech
+    - title: B.Tech in Mechanical Engineering
       institution: National Institute of Technology Karnataka, India
       year: 2014 - 2018
       # description:
