--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -69,7 +69,7 @@
         - ~$\sim600k$ Frontier node-hours
 
 - title: Open Source Projects
-  type: nested_list
+  type: time_table
   contents:
     - title: KHARMA
       description: A performance-portable GRMHD code with AMR. Primary developer of the implicit timestepper and
@@ -77,6 +77,8 @@
     - title: iharm3d
       description: Primary maintainer of the Hybrid MPI/OpenMP 3D GRMHD code. The code can be found <a href="https://github.com/AFD-Illinois/iharm3d">here</a>,
       while the code paper is <a href="https://joss.theoj.org/papers/10.21105/joss.03336">here</a>.
+    - title: iharm2d_v4
+      description: 
 
 # - title: Academic Interests
 #   type: nested_list
