--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,13 +62,36 @@
     - title: ACCESS Maximize “Event Horizon Telescope and Black Hole Astrophysics” (<b>Co-Investigator</b>)
       items: 
         - Oct. 2024 - Sep. 2025
-        - ~$\sim72k$ GPU hours, $\sim$ 680k CPU core-hours
+        - ~72k GPU hours, ~680k CPU core-hours
     - title: DOE INCITE “Horizon-scale Variability Modeling for the EHT” (<b>Co-Investigator</b>)
       items: 
         - Jan. 2024 - Dec. 2024
-        - ~$\sim600k$ Frontier node-hours
+        - ~600k Frontier node-hours
+    - title: ACCESS Maximize “Event Horizon Telescope and Black Hole Astrophysics”
+      items: 
+        - Oct. 2023 - Sep. 2024
+        - ~128k GPU hours, ~775k CPU core-hours
+    - title: DOE INCITE “Next-Generation Modeling for the EHT"
+      items: 
+        - Jan. 2022 - Dec. 2022
+        - ~410k Summit node-hours
 
-- title: Open Source Projects
+
+- title: Awards
+  type: time_table
+  contents:
+    - title: Selected for ALCF ATPESC HPC Workshop
+      year: 2023
+    - title: ICSA-NCSA Graduate Fellowship, UIUC
+      year: 2022 - 2023
+    - title: Excellent Teaching Assistant
+      year: 2019 - 2020.
+    - title: Visiting Students' Research Programme (VSRP), TIFR Mumbai
+      year: 2017
+    - title: Nominated for the OPJEMS Scholarship (top 5% in the department)
+      year: 2017
+
+- title: Computational Projects
   type: time_table
   contents:
     - title: KHARMA
@@ -77,6 +100,8 @@
       description: Primary maintainer of the Hybrid MPI/OpenMP 3D GRMHD code. The code can be found <a href="https://github.com/AFD-Illinois/iharm3d">here</a>, while the code paper is <a href="https://joss.theoj.org/papers/10.21105/joss.03336">here</a>.
     - title: iharm2d_v4
       description: A 2D ideal GRMHD code derived from iharm3d with fewer dependencies and better documentation. This is probably what you want if you're just getting started or want to run a black hole accretion problem on your laptop.
+    - title: harmless (WIP)
+      description: A python module to perform reductions on HARM data products, e.g., KHARMA / iharm3d / iharm2d_v4 output files.
 
 # - title: Academic Interests
 #   type: nested_list
