--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -40,7 +40,7 @@
 - title: Computational Grants
   type: time_table
   contents:
-    - title: (<b>Co-Investigator</b>) ACCESS Maximize “Event Horizon Telescope and Black Hole Astrophysics”
+    - title: (<b>Co-Investigator</b>) ACCESS Maximize “Event Horizon Telescope and Black Hole Astrophysics"
       year: Oct. 2024 - Sep. 2025
       description: ~72k GPU hours, ~680k CPU core-hours
     
