--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -59,6 +59,9 @@
 - title: Awards
   type: time_table
   contents:
+    - title: Dissertation Completion Fellowship
+      year: 2025 - 2026
+      
     - title: Donald C. & F. Shirley Jones Fellowship
       year: 2025
       
